--- a/NoiseTubeInteractive2/bin/AndroidManifest.xml
+++ b/NoiseTubeInteractive2/bin/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+	<uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -30,6 +30,14 @@
         <activity
             android:name="com.example.noisetubeinteractive2.DisplayProfile"
             android:label="@string/title_activity_display_profile"
+            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.noisetubeinteractive2.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.noisetubeinteractive2.NewProfileActivity"
+            android:label="@string/title_activity_new_profile"
             android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
