--- a/NoiseTubeInteractive2/bin/AndroidManifest.xml
+++ b/NoiseTubeInteractive2/bin/AndroidManifest.xml
@@ -7,42 +7,45 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-	<uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.noisetubeinteractive2.MainActivity"
+            android:name="com.noisetube.main.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.noisetubeinteractive2.DisplayMessageActivity"
+            android:name="com.noisetube.main.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
+            android:parentActivityName="com.noisetube.main.MainActivity" >
         </activity>
         <activity
-            android:name="com.example.noisetubeinteractive2.DisplayProfile"
+            android:name="com.noisetube.main.DisplayProfile"
             android:label="@string/title_activity_display_profile"
-            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
+            android:parentActivityName="com.noisetube.main.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.noisetubeinteractive2.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.noisetubeinteractive2.NewProfileActivity"
+            android:name="com.noisetube.main.NewProfileActivity"
             android:label="@string/title_activity_new_profile"
-            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
+            android:parentActivityName="com.noisetube.main.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.noisetubeinteractive2.MainActivity" />
         </activity>
+		
+		<service android:name="com.noisetube.main.SoundMeasurementService" android:exported="false"/>
     </application>
-
+	
 </manifest>
