--- a/NoiseTubeInteractive2/AndroidManifest.xml
+++ b/NoiseTubeInteractive2/AndroidManifest.xml
@@ -10,12 +10,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="com.noisetube.main.ServerConnection" >
         <activity
             android:name="com.noisetube.main.MainActivity"
             android:label="@string/app_name" >
