--- a/NoiseTubeInteractive2/AndroidManifest.xml
+++ b/NoiseTubeInteractive2/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.noisetube.main.MainActivity"
+            android:name="com.example.noisetubeinteractive2.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,20 +29,20 @@
         <activity
             android:name="com.noisetube.main.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName="com.noisetube.main.MainActivity" >
+            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
         </activity>
         <activity
             android:name="com.noisetube.main.DisplayProfile"
             android:label="@string/title_activity_display_profile"
-            android:parentActivityName="com.noisetube.main.MainActivity" >
+            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.noisetubeinteractive2.MainActivity" />
         </activity>
         <activity
-            android:name="com.noisetube.main.NewProfileActivity"
+            android:name="com.example.noisetubeinteractive2.ProfileActivity"
             android:label="@string/title_activity_new_profile"
-            android:parentActivityName="com.noisetube.main.MainActivity" >
+            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.noisetubeinteractive2.MainActivity" />
@@ -53,9 +53,9 @@
             android:exported="false" />
 
         <activity
-            android:name="com.example.noisetubeinteractive2.PostResult"
+            android:name="com.example.noisetubeinteractive2.PostResultActivity"
             android:label="@string/title_activity_post_result"
-            android:parentActivityName="com.noisetube.main.MainActivity" >
+            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.noisetube.main.MainActivity" />
@@ -63,7 +63,7 @@
         <activity
             android:name="com.example.noisetubeinteractive2.LeaderboardActivity"
             android:label="@string/title_activity_leaderboard"
-            android:parentActivityName="com.example.noisetubeinteractive2.PostResult" >
+            android:parentActivityName="com.example.noisetubeinteractive2.PostResultActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.noisetubeinteractive2.PostResult" />
