--- a/NoiseTubeInteractive2/AndroidManifest.xml
+++ b/NoiseTubeInteractive2/AndroidManifest.xml
@@ -72,6 +72,14 @@
             android:name="com.example.noisetubeinteractive2.BadgesActivity"
             android:label="@string/title_activity_badges" >
         </activity>
+        <activity
+            android:name="com.example.noisetubeinteractive2.PoiActivity"
+            android:label="@string/title_activity_poi"
+            android:parentActivityName="com.example.noisetubeinteractive2.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.noisetubeinteractive2.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
